[package]
name = "shill"
description = "Shill is a tool for shilling easily"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Citrus-Studios/shill"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
